fix some overflow-x

--- a/public/CSS/tasks.css
+++ b/public/CSS/tasks.css
@@ -756,6 +756,7 @@ aside[name~=popup_modal_task] .modal-wrapper {
 #section_ligne_haut p {
   position: absolute;
   width: 100%;
+  margin-left: -20px;
   font-family: "Product Sans Regular";
   font-size: 1.25rem;
   text-transform: uppercase;
@@ -923,6 +924,7 @@ aside[name=edit_popup_modal] .modal-wrapper {
 #section_ligne_haut_edit p {
   position: absolute;
   width: 100%;
+  margin-left: -20px;
   font-family: "Product Sans Regular";
   font-size: 1.25rem;
   text-transform: uppercase;
